--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>신동민 1주년 & 생일 축하</title>
+    <title>동민씨 1주년 & 생일 축하</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="content">
-        <!-- Page 1: 신동민을 위한 HTML -->
+        <!-- Page 1: 신동민을 위한 편지 -->
         <div id="page-1">
-            <h1>💌 신동민을 위한 HTML!</h1>
+            <h1>💌 신동민을 위한 편지!💌</h1>
             <p>버튼을 눌러주세요.</p>
             <button onclick="goToPage('page-2')">다음</button>
         </div>
@@ -25,7 +25,10 @@
         <div id="page-3" class="hidden">
             <p>안녕 오빵! 벌써 우리 1주년이다! 💕</p>
             <p>시간 진짜 빨라... 항상 같이 있어서 그런지 더 빠르게 느껴지는 것 같아 ㅠㅠ.</p>
-            <p>작년 건대에서 방어 먹었던 게 엊그제 같은데 벌써 우리 1년만에 가족 같아졌어 😊.</p>
+            <p>작년 건대에서 방어 먹었던 게 엊그제 같은데 벌써 일년이 지났네,, 😊</p>
+            <p>취준하느라 시간이 더 빨리가는 건가? ㅋㅋ 우리 둘 다 바빠가지구 ㅋㅋ</p>
+            <p>힘들어도 조금만 더 화이팅해서 꼭 성공하자 !!</p>
+            <p>열심히 하면 꼭 성공할 수 있을 거야 ~~</p>
             <p>우리 얼른 취업해서 더 큰 집에서 더 행복하게 살자! 사랑해 ❤️</p>
             <button onclick="goToPage('page-4')">계속?</button>
         </div>
@@ -40,13 +43,15 @@
         <div id="page-5" class="hidden">
             <p>오빠 안뇽? 이번에 HTML 배우면서 이런 이벤트를 준비해봤어!</p>
             <p>처음이라 부족하지만 양해 부탁해~ 나중엔 더 예쁘게 만들어줄게!</p>
-            <p>그리고 우리 사진도 많이 찍어서 더 풍성하게 만들어보자! ❤️</p>
+            <p>사진 많이 넣고 싶었는데 내가 사진찍는 걸 안 좋아해서 못 넣었네,,ㅠㅠ</p>
+            <p>나 얼른 살 많이 빼고 사진 많이 찍어서 다음 생일엔 우리 사진으로 꽉 채워볼게❤️</p>
             <button onclick="goToPage('page-6')">계속</button>
         </div>
 
         <!-- Page 6: 선물 질문 -->
         <div id="page-6" class="hidden">
-            <h2>Q1. 동민이가 원하는 선물은 ~?</h2>
+            <h2>그럼 이제 생일 선물 줄 차례 !</h2>
+            <h1>Q1. 동민이가 원하는 선물은 ~?</h1>
             <button onclick="goToPage('page-7-1')">정성스럽게 쓴 편지</button>
             <button onclick="goToPage('page-7-2')">ㅎㅎ 그래도 선물은 받아야지 ^^</button>
         </div>
