--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         
         <!-- Page 2: 우리의 1주년 -->
         <div id="page-2" class="hidden">
-            <h1>🎉 2024.11.23 우리의 1주년을 축하합니다! 🎉</h1>
+            <h1>🎉 2024.11.23🎉</h1> 
+            <h2>🎉우리의 1주년을 축하합니다! 🎉</h2>
             <button onclick="goToPage('page-3')">계속</button>
         </div>
         
@@ -35,7 +36,8 @@
 
         <!-- Page 4: 동민이의 생일 축하 -->
         <div id="page-4" class="hidden">
-            <h1>🎂 동민이의 생일을 축하합니다~! 🎂</h1>
+            <h1>🎂 2024.11.24 🎂</h1>
+            <h2>🎂 동민이의 생일을 축하합니다~! 🎂</h2>
             <button onclick="goToPage('page-5')">계속하시려면 눌러주세요</button>
         </div>
 
