--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
 
         <!-- Page 7-1: 편지 선택 -->
         <div id="page-7-1" class="hidden">
-            <p>편지를 고르신 당신! 예쁜 마음에 한 번의 기회를 더 드리겠습니다.</p>
+            <h2>편지를 고르신 당신! 예쁜 마음에 한 번의 기회를 더 드리겠습니다.</h2>
             <button onclick="goToPage('page-8')">기회 받으러 가기</button>
         </div>
 
         <!-- Page 7-2: 선물 선택 -->
         <div id="page-7-2" class="hidden">
-            <p>선물을 고르신 당신! 편지는 진정 필요 없으신가요? 😏</p>
+            <h2>선물을 고르신 당신! 편지는 진정 필요 없으신가요? 😏</h2>
             <button onclick="goToPage('page-7-2-1')">필요해요 ㅠㅠ 제발 주세요 ㅜㅜ</button>
             <button onclick="goToPage('page-7-2-2')">넵 ㅋ 전 선물만 있으면 됩니다. ㅋ</button>
         </div>
@@ -91,28 +91,39 @@
             <button onclick="goToPage('gift-4')">목도리</button>
         </div>
 
+        <div id="page-8-1" class="hidden">
+            <h2>선물을 다시 골라보세요 !</h2>
+            <button onclick="goToPage('gift-1')">전기면도기</button>
+        </div>
+
         <!-- Gift Pages -->
         <div id="gift-1" class="hidden">
             <p>오빠 전기면도기가 고장나서 준비했어! 😊</p>
+            <p>마침 오빠 전기면도기가 고장나서 ^^ 휴.. 오빠가 먼저 살까봐 걱정했어</p>
+            <p>면도기는 많이 사용하니까 쓸 때마다 내 생각 할 수 있겠따 그치 ??</p>
+            <p>사실 답정너임ㅋㅋ</p>
             <button onclick="goToPage('page-9')">계속</button>
         </div>
         <div id="gift-2" class="hidden">
-            <p>옷은 오빠랑 같이 골라서 이쁜 걸로 사러 가자! 🛍️</p>
-            <button onclick="goToPage('page-9')">계속</button>
+            <p>이거 고를 줄은 몰랐는데,,ㅎ ㅎ</p>
+            <p>옷은 오빠 원하는 걸로 사야지 !! 같이 이쁜 걸로 사러 가자! 🛍️</p>
+            <button onclick="goToPage('page-8-1')">계속</button>
         </div>
         <div id="gift-3" class="hidden">
-            <p>신발도 함께 사러 가서 이쁜 거 골라보자! 👟</p>
-            <button onclick="goToPage('page-9')">계속</button>
+            <p>이거 고를 줄은 몰랐는데,,ㅎ ㅎ</p>
+            <p>신발은 오빠 원하는 걸로 사야지 !! 같이 이쁜 걸로 사러 가자! 👟</p>
+            <button onclick="goToPage('page-8-1')">계속</button>
         </div>
         <div id="gift-4" class="hidden">
+            <p>이거 고를 줄은 몰랐는데,,ㅎ ㅎ</p>
             <p>목도리는 우리 커플로 맞춰볼까? ❤️</p>
-            <button onclick="goToPage('page-9')">계속</button>
+            <button onclick="goToPage('page-8-1')">계속</button>
         </div>
 
         <!-- Page 9: 최종 메시지 -->
         <div id="page-9" class="hidden">
             <h1>한 주밖에 안 배웠지만 정성껏 준비했어! 사랑해 ❤️</h1>
-            <p>이벤트 어땠어? 다음엔 더 멋지게 준비할게!</p>
+            <p>이벤트 어땠어? 다음엔 더 멋지게 만들어 줄게!</p>
             <button onclick="goToPage('page-1')">처음으로</button>
         </div>
     </div>
